Added chat GUI, achievements badges + general improvements