@@ -1,128 +1,142 @@
 package com.teamagly.friendizer.utils;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
+import java.util.ArrayList;
 
-import org.json.*;
+import org.json.JSONArray;
+import org.json.JSONException;
+import org.json.JSONObject;
 
-import com.teamagly.friendizer.model.*;
+import com.teamagly.friendizer.model.AchievementInfo;
+import com.teamagly.friendizer.model.FriendizerUser;
+import com.teamagly.friendizer.model.Message;
 
 public final class ServerFacade {
-    private static final String serverAddress = "http://friendizer.appspot.com/";
+    private static final String fullServerAddress = "http://friendizer.appspot.com/";
+    private static final String scheme = "http";
+    private static final String serverAddress = "friendizer.appspot.com";
 
     private ServerFacade() {
     }
 
-    public static void register(long userID) throws Exception {
-	URL url = new URL(serverAddress + "register?userID=" + userID);
+    public static FriendizerUser userDetails(long userID) throws Exception {
+	URL url = new URL(fullServerAddress + "userDetails?userID=" + userID);
 	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
+	FriendizerUser user = new FriendizerUser(new JSONObject(in.readLine()));
 	in.close();
-	// Get the user's details and update the userInfo object
-	if (Utility.getInstance().userInfo == null)
-	    Utility.getInstance().userInfo = userDetails(userID);
-	else
-	    Utility.getInstance().userInfo.updateFriendizerData(userDetails(userID));
-    }
-
-    public static UserInfo userDetails(long userID) throws Exception {
-	URL url = new URL(serverAddress + "userDetails?userID=" + userID);
-	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
-	User user = new User(new JSONObject(in.readLine()));
-	in.close();
-	return new UserInfo(userID, user.getValue(), user.getMoney(), user.getOwner(), ownList(userID));
+	user.setOwnsList(ownList(userID));
+	return user;
     }
 
     public static long[] ownList(long userID) throws Exception {
-	URL url = new URL(serverAddress + "ownList?userID=" + userID);
+	URL url = new URL(fullServerAddress + "ownList?userID=" + userID);
 	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
 	JSONArray users = new JSONArray(in.readLine());
 	in.close();
 	long[] usersID = new long[users.length()];
 	for (int i = 0; i < users.length(); i++) {
-	    User user = new User(users.getJSONObject(i));
+	    FriendizerUser user = new FriendizerUser(users.getJSONObject(i));
 	    usersID[i] = user.getId();
 	}
 	return usersID;
     }
 
     public static void buy(long userID, long buyID) throws Exception {
-	URL url = new URL(serverAddress + "buy?userID=" + userID + "&buyID=" + buyID);
+	URL url = new URL(fullServerAddress + "buy?userID=" + userID + "&buyID=" + buyID);
 	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
 	in.close();
     }
 
     public static void changeLocation(long userID, double latitude, double longitude) throws Exception {
-	URL url = new URL(serverAddress + "changeLocation?userID=" + userID + "&latitude=" + latitude + "&longitude=" + longitude);
+	URL url = new URL(fullServerAddress + "changeLocation?userID=" + userID + "&latitude=" + latitude + "&longitude="
+		+ longitude);
 	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
 	in.close();
     }
 
     public static long[] nearbyUsers(long userID) throws JSONException, IOException {
-	URL url = new URL(serverAddress + "nearbyUsers?userID=" + userID);
+	URL url = new URL(fullServerAddress + "nearbyUsers?userID=" + userID);
 	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
 	JSONArray users = new JSONArray(in.readLine());
 	in.close();
 	long[] usersID = new long[users.length()];
 	for (int i = 0; i < users.length(); i++) {
-	    User user = new User(users.getJSONObject(i));
+	    FriendizerUser user = new FriendizerUser(users.getJSONObject(i));
 	    usersID[i] = user.getId();
 	}
 	return usersID;
     }
-    
-    public static void sendMessage(long source, long destination, String text) throws Exception {
-		URL url = new URL(serverAddress + "send?src=" + source
-				+ "&dest=" + destination + "&text=" + text);
-		BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
-		in.close();
+
+    public static void sendMessage(Message msg) throws Exception {
+	String params = "src=" + Utility.getInstance().userInfo.getId() + "&dest=" + msg.getDestination() + "&text="
+		+ msg.getText();
+	// Use URI to escape characters (whitespace and non-ASCII characters)
+	URI uri = new URI(scheme, serverAddress, "/send", params, null);
+	URL url = new URL(uri.toASCIIString());
+	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
+	in.close();
+    }
+
+    /**
+     * @return all the unread messages sent to the current user
+     * @throws Exception
+     */
+    public static Message[] getUnread() throws Exception {
+	URL url = new URL(fullServerAddress + "getUnread?userID=" + Utility.getInstance().userInfo.getId());
+	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
+
+	JSONArray JsonMessages = new JSONArray(in.readLine());
+	in.close();
+
+	Message[] messages = new Message[JsonMessages.length()];
+
+	for (int i = 0; i < JsonMessages.length(); i++) {
+	    Message message = new Message(JsonMessages.getJSONObject(i));
+	    messages[i] = message;
 	}
-    
-    public static Message[] readMessages(long source, long destination,
-    		long from, long to) throws Exception {
-    	
-		URL url = new URL(serverAddress + "read?src=" + source
-				+ "&dest=" + destination + "&from=" + from + "&to=" + to);
-		BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
-		
-		JSONArray JsonMessages = new JSONArray(in.readLine());	
-		in.close();
-		
-		Message[] messages = new Message[JsonMessages.length()];
-		
-		for (int i = 0; i < JsonMessages.length(); i++) {
-			Message message = new Message(JsonMessages.getJSONObject(i));
-			messages[i] = message;
-		}
-		
-		return messages;
-		
+
+	return messages;
+    }
+
+    /**
+     * @param userID
+     *            ID of a friend
+     * @param from
+     * @param to
+     * @return all the messages between the current user and the given one
+     * @throws Exception
+     */
+    public static ArrayList<Message> getConversation(long userID, long from, long to) throws Exception {
+	URL url = new URL(fullServerAddress + "getConversation?user1=" + Utility.getInstance().userInfo.getId() + "&user2="
+		+ userID + "&from=" + from + "&to=" + to);
+	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
+
+	JSONArray JsonMessages = new JSONArray(in.readLine());
+	in.close();
+
+	ArrayList<Message> messages = new ArrayList<Message>(JsonMessages.length());
+
+	for (int i = JsonMessages.length() - 1; i >= 0; i--) {
+	    Message message = new Message(JsonMessages.getJSONObject(i));
+	    messages.add(message);
 	}
-    
-    public static Message[] readUnreaded(long source) throws Exception {
-		URL url = new URL(serverAddress + "unread?src=" + source);
-		BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
-		
-		JSONArray JsonMessages = new JSONArray(in.readLine());	
-		in.close();
-		
-		Message[] messages = new Message[JsonMessages.length()];
-		
-		for (int i = 0; i < JsonMessages.length(); i++) {
-			Message message = new Message(JsonMessages.getJSONObject(i));
-			messages[i] = message;
-		}
-		
-		return messages;
-	}
-    
+
+	return messages;
+
+    }
+
     public static AchievementInfo[] achievements(long userID) throws Exception {
-    	URL url = new URL(serverAddress + "?achievements=" + userID);
-    	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
-    	JSONArray userAchvs = new JSONArray(in.readLine());
-    	in.close();
-    	AchievementInfo[] achvs = new AchievementInfo[userAchvs.length()];
-    	for (int i = 0; i < userAchvs.length(); i++)
-    		achvs[i] = new AchievementInfo(userAchvs.getJSONObject(i));
-    	return achvs;
+	URL url = new URL(serverAddress + "?achievements=" + userID);
+	BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()));
+	JSONArray userAchvs = new JSONArray(in.readLine());
+	in.close();
+	AchievementInfo[] achvs = new AchievementInfo[userAchvs.length()];
+	for (int i = 0; i < userAchvs.length(); i++)
+	    achvs[i] = new AchievementInfo(userAchvs.getJSONObject(i));
+	return achvs;
     }
 }
